--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: #f4f4f4;
+  background-color: #130F18;
   margin: 0;
   padding: 20px;
 }
@@ -16,18 +16,16 @@ button {
   font-size: 16px;
   cursor: pointer;
   border: none;
-  background-color: #007bff;
+  background-color: #cc8abe;
   color: white;
   border-radius: 5px;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #cc8abe;
 }
 
 .image-container img {
-  max-width: 90%;
+  max-width: 100%;
   height: auto;
-  border: 2px solid #ccc;
-  border-radius: 10px;
 }
